# jobpilot

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  patch_fix.py  pyproject.toml  sample_payload.json  sample_score_payload.json
docs/: jobpilot_stealth_agent_design.docx  jobpilot_tracker.xlsx
docs/demo/: README.md  sample_run.jsonl
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/lib/: api.js  onboarding.js
samples/: demo_applicant.json
scripts/: apply_headers.py  build_tracker.py  demo.py
src/jobpilot/: __init__.py  config.py
src/jobpilot/api/: schemas.py  server.py
src/jobpilot/browser/: launcher.py
src/jobpilot/fit/: archetypes.py  cache.py  scorer.py
src/jobpilot/fit/scrapers/: careers.py  glassdoor.py  greenhouse_jd.py
src/jobpilot/flow/: batch.py  email_stub.py  greenhouse.py  honeypot.py  parser.py  router.py  upload.py
src/jobpilot/flow/adapters/: base.py
src/jobpilot/humanizer/: __init__.py  mouse.py  pacing.py  typing.py
src/jobpilot/llm/: client.py  prompts.py  resume_parser.py
src/jobpilot/observability/: artifacts.py  logger.py
tests/fixtures/greenhouse_pages/: test_co_senior_pm.html
tests/integration/: test_greenhouse_parse.py
tests/unit/: __init__.py  test_archetypes.py  test_humanizer.py  test_platforms.py
