[tool.poetry]
name = "jobpilot"
version = "0.1.0"
description = "Autonomous Greenhouse application agent with archetype-based fit intelligence."
authors = ["JobPilot Engineering"]
readme = "README.md"
packages = [{ include = "jobpilot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
patchright = "^1.48.0"
playwright = "^1.48.0"
playwright-stealth = "^2.0.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.3.0"
google-generativeai = "^0.8.3"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
numpy = "^2.1.0"
httpx = "^0.27.0"
tenacity = "^9.0.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
